Fixed a horizontal scroll bar of the side bar was visible on Firefox.

--- a/map.css
+++ b/map.css
@@ -14,7 +14,6 @@ div#sidebar {
 
 div#sidebar_container {
 	padding: 10px;
-	width: 300px;
 }
 
 div#tweets {
